cmake_minimum_required(VERSION 3.24)
project(vscode)

set(CMAKE_CXX_STANDARD 14)

add_executable(vscode
        408/dLinkList.cpp
        408/DynamicLinarList.cpp
        408/linarlist.cpp
        408/SinglyLinkList.cpp
        408/SinglyLinkListWithNoHead.cpp
        address.c
        array.c
        const.c
        helloworld.c
        linarlist1.cpp
        linarlist2.cpp
        localvaries.c
        para.c
        scanfprintf.c
        static.c
        string.c
        struct.c
        value.c
        variablesize.c
        yinhao.c)
